--- a/covidWarehouse/manuscript/references.bib
+++ b/covidWarehouse/manuscript/references.bib
@@ -1,6 +1,25 @@
 
 
 
+
+
+
+@article{KaiWang2020,
+title = {{Temporal profiles of viral load in posterior oropharyngeal saliva samples and serum antibody responses during infection by SARS-CoV-2: an observational cohort study}},
+journal = "The Lancet Infectious Diseases",
+volume = "20",
+number = "5",
+pages = "565 - 574",
+year = "2020",
+doi = "https://doi.org/10.1016/S1473-3099(20)30196-1",
+author = "Kelvin Kai-Wang To and Owen Tak-Yin Tsang and Wai-Shing Leung and Anthony Raymond Tam and Tak-Chiu Wu and David Christopher Lung and Cyril Chik-Yan Yip and Jian-Piao Cai and Jacky Man-Chun Chan and Thomas Shiu-Hong Chik and Daphne Pui-Ling Lau and Chris Yau-Chung Choi and Lin-Lei Chen and Wan-Mui Chan and Kwok-Hung Chan and Jonathan Daniel Ip and Anthony Chin-Ki Ng and Rosana Wing-Shan Poon and Cui-Ting Luo and Vincent Chi-Chung Cheng and Jasper Fuk-Woo Chan and Ivan Fan-Ngai Hung and Zhiwei Chen and Honglin Chen and Kwok-Yung Yuen"
+}
+
+@unpublished{Easter6,
+title = {{Investigation of SARS-CoV-2 Outbreaks in Six Care Homes in London: The Easter 6 Care Home Investigation}},
+year = 2020,
+author= {Shamez Ladhani and Maria Zambon and Nandini Shetty and Meera Chand and Richard Myers and Mark Driver and Gwyn Morris and Lynne Foster and Kevin Brown and Mary Ramsay and Susan Hopkins and Yimmy Chow and Edward Wynne-Evans and Anita Bell and Emma Crawley-Boevey and Jonathan Fok and Roshni Janarthanan and Amoolya Vusirikala and Elena Fernandez and Marina Sanchez Perez and Suzanne Tang and Kate Dun-Campbell and Karthik Paranthaman and Thomas Ma and Maria Saavedra-Campos and Alex Allen}}
+
 @article{Kucirka2020,
 author = {Kucirka, Lauren M. and Lauer, Stephen A. and Laeyendecker, Oliver and Boon, Denali and Lessler, Justin},
 doi = {10.7326/M20-1495},
@@ -12,32 +31,39 @@ title = {{Variation in False-Negative Rate of Reverse Transcriptase Polymerase C
 year = {2020}
 }
 
-
-@article{KaiWang2020,
-title = "Temporal profiles of viral load in posterior oropharyngeal saliva samples and serum antibody responses during infection by SARS-CoV-2: an observational cohort study",
-journal = "The Lancet Infectious Diseases",
-volume = "20",
-number = "5",
-pages = "565 - 574",
-year = "2020",
-doi = "https://doi.org/10.1016/S1473-3099(20)30196-1",
-author = "Kelvin Kai-Wang To and Owen Tak-Yin Tsang and Wai-Shing Leung and Anthony Raymond Tam and Tak-Chiu Wu and David Christopher Lung and Cyril Chik-Yan Yip and Jian-Piao Cai and Jacky Man-Chun Chan and Thomas Shiu-Hong Chik and Daphne Pui-Ling Lau and Chris Yau-Chung Choi and Lin-Lei Chen and Wan-Mui Chan and Kwok-Hung Chan and Jonathan Daniel Ip and Anthony Chin-Ki Ng and Rosana Wing-Shan Poon and Cui-Ting Luo and Vincent Chi-Chung Cheng and Jasper Fuk-Woo Chan and Ivan Fan-Ngai Hung and Zhiwei Chen and Honglin Chen and Kwok-Yung Yuen"
-
+@article{McMichael2020,
+author = {McMichael, Temet M. and Currie, Dustin W. and Clark, Shauna and Pogosjans, Sargis and Kay, Meagan and Schwartz, Noah G. and Lewis, James and Baer, Atar and Kawakami, Vance and Lukoff, Margaret D. and Ferro, Jessica and Brostrom-Smith, Claire and Rea, Thomas D. and Sayre, Michael R. and Riedo, Francis X. and Russell, Denny and Hiatt, Brian and Montgomery, Patricia and Rao, Agam K. and Chow, Eric J. and Tobolowsky, Farrell and Hughes, Michael J. and Bardossy, Ana C. and Oakley, Lisa P. and Jacobs, Jesica R. and Stone, Nimalie D. and Reddy, Sujan C. and Jernigan, John A. and Honein, Margaret A. and Clark, Thomas A. and Duchin, Jeffrey S.},
+title = {{Epidemiology of Covid-19 in a Long-Term Care Facility in King County, Washington}},
+journal = {New England Journal of Medicine},
+volume = {382},
+number = {21},
+pages = {2005-2011},
+year = {2020},
+doi = {10.1056/NEJMoa2005412}
 }
+
+
 
 # Reports
 
-@misc{cisbulletin2020,
+@report{cisbulletin2020,
 author = {{England Office for National Statistics}},
 title = {{Coronavirus (COVID-19) Infection Survey pilot: 18 June 2020}},
 url = {https://www.ons.gov.uk/peoplepopulationandcommunity/healthandsocialcare/conditionsanddiseases/bulletins/coronaviruscovid19infectionsurveypilot/latest#covid-19-infection-survey-data},
 note = {Accessed: 2020-06-19}
 }
 
-@misc{cisdata2020,
+@report{cisdata2020,
 author = {{England Office for National Statistics}},
 title = {{COVID-19 Infection Survey Datasets}},
 url = {https://www.ons.gov.uk/file?uri=%2fpeoplepopulationandcommunity%2fhealthandsocialcare%2fconditionsanddiseases%2fdatasets%2fcoronaviruscovid19infectionsurveydata%2f2020/covid19infectionsurveydatasets20200618full1.xlsx},
+note = {Accessed: 2020-06-19}
+}
+
+@misc{dhscTesting2020,
+author = {{UK Department of Health & Social Care}},
+title = {{Press release: Government launches new portal for care homes to arrange coronavirus testing}},
+url = {https://webarchive.nationalarchives.gov.uk/20200616160922/https://www.gov.uk/government/news/government-launches-new-portal-for-care-homes-to-arrange-coronavirus-testing},
 note = {Accessed: 2020-06-19}
 }
 
@@ -58,14 +84,20 @@ url = {https://www.cqc.org.uk/sites/default/files/HSCA_Active_Locations_01_June_
 note = {Accessed: 2020-06-17}
 }
 
-@misc{isd2020,
+@report{isd2020,
 author = {{NHS National Services Scotland Information Services Division}},
 year = 2020,
-title = {Care Home Census for Adults in Scotland Figures for 2007-2017 (as at 31 March)},
+title = {{Care Home Census for Adults in Scotland Figures for 2007-2017 (as at 31 March)}},
 url = {https://www.isdscotland.org/Health-Topics/Health-and-Social-Community-Care/Publications/2018-09-11/2018-09-11-CHCensus-Report.pdf?13142031432},
 note = {Accessed: 2020-06-17}
 }
 
+@report{onsDR2020,
+author = {{England Office for National Statistics}},
+year = 2020,
+title = {{Deaths involving COVID-19 in the care sector, England and Wales: deaths occurring up to 1 May 2020 and registered up to 9 May 2020 (provisional)}},
+url = {https://webarchive.nationalarchives.gov.uk/20200607080706/https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/articles/deathsinvolvingcovid19inthecaresectorenglandandwales/deathsoccurringupto1may2020andregisteredupto9may2020provisional},
+note = {Accessed: 2020-06-07}}
 
 # Software
 
@@ -78,7 +110,7 @@ note = {Accessed: 2020-06-17}
 }
 
 @Manual{RCoreTeam2018,
-    title = {R: A Language and Environment for Statistical Computing},
+    title = {{R: A Language and Environment for Statistical Computing}},
     author = {{R Core Team}},
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
